--- a/package.json
+++ b/package.json
@@ -2,25 +2,34 @@
   "name": "koa",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --exec babel-node src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@koa/cors": "^4.0.0",
-    "koa": "^2.13.4",
-    "koa-body": "^5.0.0",
+    "@koa/cors": "^3.0.0",
+    "axios": "^1.1.3",
+    "koa": "^2.7.0",
+    "koa-body": "^4.1.0",
     "koa-combine-routers": "^4.0.2",
-    "koa-helmet": "^6.1.0",
+    "koa-helmet": "^4.2.0",
     "koa-json": "^2.0.2",
-    "koa-router": "^12.0.0",
-    "koa-static": "^5.0.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-merge": "^4.2.2",
+    "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/node": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^5.2.0",
+    "nodemon": "^1.19.1",
+    "webpack": "^4.38.0",
+    "webpack-cli": "^3.3.6",
     "webpack-node-externals": "^1.7.2"
   }
 }
