--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node src/index.js"
+    "start": "nodemon --exec babel-node src/index.js",
+    "webpack:debug": "node --inspect-brk ./node_modules/webpack/bin/webpack --inline --progress",
+    "build": "cross-env NODE_ENV=prod webpack --config config/webpack.config.prod.js",
+    "dev": "cross-env NODE_ENV=perer webpack --config config/webpack.config.dev.js",
+    "clean": "rimraf dist"
   },
   "keywords": [],
-  "author": "",
+  "author": "brian@toimc.com",
   "license": "ISC",
   "dependencies": {
     "@koa/cors": "^3.0.0",
-    "axios": "^1.1.3",
     "koa": "^2.7.0",
     "koa-body": "^4.1.0",
     "koa-combine-routers": "^4.0.2",
+    "koa-compose": "^4.1.0",
+    "koa-compress": "^3.0.0",
     "koa-helmet": "^4.2.0",
     "koa-json": "^2.0.2",
     "koa-router": "^7.4.0",
@@ -28,8 +33,11 @@
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^5.2.0",
     "nodemon": "^1.19.1",
-    "webpack": "^4.38.0",
+    "rimraf": "^2.6.3",
+    "terser-webpack-plugin": "^1.4.1",
+    "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
+    "webpack-merge": "^4.2.1",
     "webpack-node-externals": "^1.7.2"
   }
 }
