--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "koa-helmet": "^4.2.0",
     "koa-json": "^2.0.2",
     "koa-router": "^7.4.0",
-    "koa-static": "^5.0.0"
+    "koa-static": "^5.0.0",
+    "moment": "^2.24.0",
+    "nodemailer": "^6.3.0",
+    "svg-captcha": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
