--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "koa-static": "^5.0.0",
     "moment": "^2.24.0",
     "nodemailer": "^6.3.0",
-    "svg-captcha": "^1.4.0"
+    "svg-captcha": "^1.4.0",
+    "mongoose": "^5.7.1",
+    "saslprep": "^1.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
