--- a/package.json
+++ b/package.json
@@ -14,21 +14,22 @@
   "author": "brian@toimc.com",
   "license": "ISC",
   "dependencies": {
-    "@koa/cors": "^3.0.0",
-    "koa": "^2.7.0",
-    "koa-body": "^4.1.0",
-    "koa-combine-routers": "^4.0.2",
-    "koa-compose": "^4.1.0",
-    "koa-compress": "^3.0.0",
-    "koa-helmet": "^4.2.0",
-    "koa-json": "^2.0.2",
-    "koa-router": "^7.4.0",
-    "koa-static": "^5.0.0",
-    "moment": "^2.24.0",
-    "nodemailer": "^6.3.0",
-    "svg-captcha": "^1.4.0",
-    "mongoose": "^5.7.1",
-    "saslprep": "^1.0.3"
+      "@koa/cors": "^3.0.0",
+      "koa": "^2.7.0",
+      "koa-body": "^4.1.0",
+      "koa-combine-routers": "^4.0.2",
+      "koa-compose": "^4.1.0",
+      "koa-compress": "^3.0.0",
+      "koa-helmet": "^4.2.0",
+      "koa-json": "^2.0.2",
+      "koa-router": "^7.4.0",
+      "koa-static": "^5.0.0",
+      "moment": "^2.24.0",
+      "nodemailer": "^6.3.0",
+      "svg-captcha": "^1.4.0",
+      "mongoose": "^5.7.1",
+      "saslprep": "^1.0.3",
+      "redis": "^2.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
